Fix form fields on mobile and tablet

--- a/app/assets/stylesheets/forms.css.sass
+++ b/app/assets/stylesheets/forms.css.sass
@@ -42,6 +42,9 @@ form
     width: 25%
     padding-right: 1em
     text-align: right
+    @include respond-to(tablet)
+      text-align: left
+      width: 100%
 
   div.field
     // float: left
@@ -78,6 +81,8 @@ form
     border-radius: 0
     @include rem-fallback(padding, 0.5)
     @include rem-fallback(min-height, 2)
+    @include respond-to(tablet)
+      width: 100%
 
   input[type=submit]
     -webkit-appearance: none
